--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@ competence, such as sport, martial arts
  military applications and some other occupations.
 
 <div style="text-align:center;">
-Qюда вставляем код баннера
+<script async type="application/javascript" src="https://a.exdynsrv.com/ad-provider.js"></script> 
+ <ins class="adsbyexoclick" data-zoneid="4350908"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 </div>
 
 <div style="text-align:center;">
-Zюда вставляем код баннера
+ZГѕГ¤Г  ГўГ±ГІГ ГўГ«ГїГҐГ¬ ГЄГ®Г¤ ГЎГ Г­Г­ГҐГ°Г 
 </div>
 
 
