--- a/index.html
+++ b/index.html
@@ -65,7 +65,18 @@ competence, such as sport, martial arts
 </div>
 
 <div style="text-align:center;">
-Zþäà âñòàâëÿåì êîä áàííåðà
+<script type="application/javascript" src="https://a.exdynsrv.com/video-slider.js"></script>
+<script type="application/javascript">
+var adConfig = {
+    "idzone": 4350910,
+    "frequency_period": 15,
+    "close_after": 0,
+    "on_complete": "repeat",
+    "branding_enabled": 1,
+    "screen_density": 22
+};
+ExoVideoSlider.init(adConfig);
+</script>
 </div>
 
 
