--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@ ExoVideoSlider.init(adConfig);
 </script>
 </div>
 
-
+<div style="text-align:left;"> 
+<script async type="application/javascript" src="https://a.exdynsrv.com/ad-provider.js"></script> 
+ <ins class="adsbyexoclick" data-zoneid="4350912"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+</div>
+ 
 </body>
 
 </html>
