--- a/index.html
+++ b/index.html
@@ -60,29 +60,34 @@ competence, such as sport, martial arts
 
 <div style="text-align:center;">
 <script async type="application/javascript" src="https://a.exdynsrv.com/ad-provider.js"></script> 
- <ins class="adsbyexoclick" data-zoneid="4350908"></ins> 
+ <ins class="adsbyexoclick" data-zoneid="4351834"></ins> 
  <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 </div>
 
 <div style="text-align:center;">
+<script type="application/javascript">
+    var ad_idzone = "4351838",
+    ad_width = "900",
+    ad_height = "250",
+    v_pos = "bottom",
+    h_pos = "center";
+</script>
+<script type="application/javascript" src="https://a.exdynsrv.com/js.php?t=17&idzone=4351838"></script>
+</div>
+
+<div style="text-align:left;"> 
 <script type="application/javascript" src="https://a.exdynsrv.com/video-slider.js"></script>
 <script type="application/javascript">
 var adConfig = {
-    "idzone": 4350910,
+    "idzone": 4351840,
     "frequency_period": 15,
     "close_after": 0,
     "on_complete": "repeat",
     "branding_enabled": 1,
-    "screen_density": 22
+    "screen_density": 25
 };
 ExoVideoSlider.init(adConfig);
 </script>
-</div>
-
-<div style="text-align:left;"> 
-<script async type="application/javascript" src="https://a.exdynsrv.com/ad-provider.js"></script> 
- <ins class="adsbyexoclick" data-zoneid="4350912"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 </div>
  
 </body>
