--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@ competence, such as sport, martial arts
 
 <div style="text-align:center;">
 <script type="application/javascript">
-    var ad_idzone = "4351838",
-    ad_width = "900",
-    ad_height = "250",
-    v_pos = "bottom",
-    h_pos = "center";
+    var ad_idzone = "4351842",
+    ad_width = "160",
+    ad_height = "600",
+    v_pos = "middle",
+    h_pos = "left";
 </script>
-<script type="application/javascript" src="https://a.exdynsrv.com/js.php?t=17&idzone=4351838"></script>
+<script type="application/javascript" src="https://a.exdynsrv.com/js.php?t=17&idzone=4351842"></script>
 </div>
 
 <div style="text-align:left;"> 
