--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ ExoVideoSlider.init(adConfig);
 </script>
 </div>
  
+ <div style="text-align:left;">
+ <iframe src="https://ad2bitcoin.com/ad.php?ref=jayso&width=728" marginwidth="0" marginheight="0" width="728" height="90" scrolling="no" border="0" frameborder="0"></iframe>
+  </div>
+ 
 </body>
 
 </html>
