--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ ExoVideoSlider.init(adConfig);
  <div style="text-align:left;">
  <iframe src="https://ad2bitcoin.com/ad.php?ref=jayso&width=728" marginwidth="0" marginheight="0" width="728" height="90" scrolling="no" border="0" frameborder="0"></iframe>
   </div>
+
+ <div style="text-align:left;">
+ <iframe data-aa="1712600" src="//acceptable.a-ads.com/1712600" scrolling="no" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden" allowtransparency="true"></iframe> 
+  </div>
  
 </body>
 
