--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ color: rgb(222, 184, 135)
 <span style="margin-left:5px;"> Training   </span;></a>
 </p>
  
- is teaching, or developing in oneself or others, any skills and knowledge or fitness that relate to specific useful competencies.
+Training is teaching, or developing in oneself or others, any skills and knowledge or fitness that relate to specific useful competencies.
  
 <div style="text-align:center;">
 Training has specific goals of improving one's capability, capacity, productivity and performance    
