--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ color: rgb(222, 184, 135)
 <span style="margin-left:5px;"> Training   </span;></a>
 </p>
  
+ <p> <iframe data-aa="1716032" src="//ad.a-ads.com/1716032?size=728x90" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;" ></iframe>  </p>
+ 
 Training is teaching, or developing in oneself or others, any skills and knowledge or fitness that relate to specific useful competencies.
  
 <div style="text-align:center;">
