--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ color: rgb(222, 184, 135)
  
  <p> <iframe data-aa="1716032" src="//ad.a-ads.com/1716032?size=728x90" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;" ></iframe>  </p>
  
+ <p> <div id="webtraf_2553" style="width:468px;height:60px;"><script src="https://webtrafic.ru/ads.php?uid=2553" async></script></div>   </p>
+ 
 Training is teaching, or developing in oneself or others, any skills and knowledge or fitness that relate to specific useful competencies.
  
 <div style="text-align:center;">
