--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@ color: rgb(222, 184, 135)
 <span style="margin-left:5px;"> Training   </span;></a>
 </p>
  
- <head> <script type="text/javascript" data-cfasync="false">
-var pmauid = '62368';
-var pmawid = '66621';
-var fq = '0';
-</script>
-<script type="text/javascript" data-cfasync="false" src="https://cdn.popmyads.com/pma.js"></script> </head>
+ <head>  </head>
  
  <p> <iframe data-aa="1716032" src="//ad.a-ads.com/1716032?size=728x90" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;" ></iframe>  </p>
  
